crates/ark/src/snapshots/ark__console_annotate__tests__annotate_input_shifted_line_and_character.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
#line 11 "file:///test.R"
     x <- 1
y <- 2
