crates/ark/src/snapshots/ark__console_annotate__tests__annotate_input_with_breakpoint.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
#line 4 "file:///test.R"
0
base::.ark_breakpoint(browser(), "file:///test.R", "1")
#line 5 "file:///test.R"
1
2
