crates/ark/src/snapshots/ark__console_annotate__tests__annotate_input_with_existing_whitespace_shifted.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
#line 1 "file:///test.R"
    x <- 1
  y <- 2
