crates/ark/src/snapshots/ark__console_annotate__tests__annotate_source_basic.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
{
x <- 1
y <- 2
}
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 1L, 3L))
