crates/ark/src/snapshots/ark__console_annotate__tests__annotate_source_breakpoint_on_function_definition_line.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
{
#line 1 "file:///test.R"
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "1"))
#line 1 "file:///test.R"
f <- function(x) {
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "2"))
#line 2 "file:///test.R"
  1
}
}
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 1L, 4L))
