crates/ark/src/snapshots/ark__console_annotate__tests__annotate_source_multiline_expression.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
{
#line 1 "file:///test.R"
foo <- function(x) {
  x + 1
}
bar <- 2
}
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 1L, 5L))
