crates/ark/src/snapshots/ark__console_annotate__tests__annotate_source_multiple_breakpoints_inside_braces.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
base::list({
#line 1 "file:///test.R"
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "1"))
#line 1 "file:///test.R"
{
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "2"))
#line 2 "file:///test.R"
  1
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 2L, 3L))
#line 3 "file:///test.R"
  2
}
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 1L, 5L))

#line 6 "file:///test.R"
2
}, base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 1L, 7L)))[[1]]
