crates/ark/src/snapshots/ark__console_annotate__tests__annotate_source_multiple_expressions.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
{
#line 1 "file:///test.R"
a <- 1
b <- 2
c <- 3
}
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 1L, 4L))
